--- a/config-service/config-service/src/main/resources/bootstrap.yml
+++ b/config-service/config-service/src/main/resources/bootstrap.yml
@@ -7,12 +7,12 @@ spring:
       server:
         git:
           uri: https://github.com/kevinandres85/Spring.git
-          searchPath: config-data
           username: ${GIT_USER}
           password: ${GIT_PASSWORD}
+          search-paths: config-data
   security:
     user:
       name: root
       password: s3cr3t
-      
+
 
