--- a/config-service/config-service/src/main/resources/bootstrap.yml
+++ b/config-service/config-service/src/main/resources/bootstrap.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8083
+  port: 8081
 
 spring:
   cloud:
@@ -7,12 +7,11 @@ spring:
       server:
         git:
           uri: https://github.com/kevinandres85/Spring.git
+          searchPaths: config-data
           username: ${GIT_USER}
           password: ${GIT_PASSWORD}
-          search-paths: config-data
+          default-label: master
   security:
     user:
       name: root
       password: s3cr3t
-
-
