--- a/config-data/product-service.yml
+++ b/config-data/product-service.yml
@@ -9,7 +9,7 @@ server:
 spring:
 
   datasource:
-    url: jdbc:mysql://localhost:3306/store
+    url: jdbc:mysql://localhost:3306/product-service
     driverClassName: com.mysql.cj.jdbc.Driver
     username: root
     password: 1234
