--- a/config-data/product-service.yml
+++ b/config-data/product-service.yml
@@ -20,7 +20,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     database-platform: org.hibernate.dialect.MySQL5Dialect
     properties:
       hibernate:
