--- a/shopping-service/build.gradle
+++ b/shopping-service/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 //	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.27'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.6'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
