--- a/config-data/customer-service.yml
+++ b/config-data/customer-service.yml
@@ -35,3 +35,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8099/eureka/
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
