--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 //	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.27'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.6'
+	compile group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.5.3'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
