--- a/admin-service/admin-service/build.gradle
+++ b/admin-service/admin-service/build.gradle
@@ -18,7 +18,9 @@ ext {
 
 dependencies {
 	implementation 'de.codecentric:spring-boot-admin-starter-server'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
 }
 
 dependencyManagement {
