--- a/customer-service/build.gradle
+++ b/customer-service/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 //	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.27'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.6'
-	implementation group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.5.3'
+	compile group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.2.1'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
