--- a/customer-service/src/main/resources/bootstrap.yml
+++ b/customer-service/src/main/resources/bootstrap.yml
@@ -9,4 +9,6 @@ spring:
   boot:
     admin:
       client:
-        url: http://localhost:8080
+        url: http://localhost:8086
+        instance:
+          prefer-ip: true
