--- a/customer-service/build.gradle
+++ b/customer-service/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-//	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.27'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.6'
 	compile group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.2.1'
