--- a/gateway-service/gateway-service/build.gradle
+++ b/gateway-service/gateway-service/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.6'
 	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.0.4'
+	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
