--- a/shopping-service/build.gradle
+++ b/shopping-service/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.9.RELEASE'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard:2.2.9.RELEASE'
 	compile group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.2.1'
-//	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.27'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.6'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
